# flapjack

./: .debbie.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PRIORITIES.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SECURITY.md
engine/flapjack-http/: Cargo.toml  build.rs
engine/flapjack-http/examples/: regen_openapi.rs
engine/flapjack-http/src/: admin_key_persistence.rs  ai_provider.rs  analytics_cluster.rs  auth_tests.rs  background_tasks.rs  background_tasks_tests.rs  conversation_store.rs  dashboard_build.rs  dto.rs  dto_tests.rs  error_response.rs  extractors.rs  federation.rs  filter_parser.rs  fusion.rs  geoip.rs  idempotency.rs  latency_middleware.rs  lib.rs  memory_middleware.rs  middleware.rs  middleware_tests.rs  mutation_parity.rs  notifications.rs  openapi.rs  openapi_export.rs  openapi_export_tests.rs  openapi_test_helpers.rs  openapi_tests.rs  openapi_tests_endpoints.rs  openapi_tests_legacy_filter.rs  operations_consumer_contract_tests.rs  otel.rs  pause_registry.rs  rollup_broadcaster.rs  router.rs  router_inline_tests.rs  router_tests.rs  security_sources.rs  server.rs  (+13 more)
engine/flapjack-http/src/auth/: key_store.rs  middleware.rs  mod.rs  route_acl.rs
engine/flapjack-http/src/auth_tests/: key_store_tests.rs  middleware_tests.rs  restrict_sources_tests.rs  route_acl_tests.rs  secured_key_tests.rs
engine/flapjack-http/src/auth_tests/route_acl_tests/: extract_index_name_tests.rs  index_pattern_tests.rs  required_acl_tests.rs
engine/flapjack-http/src/dto/: filter_parsing.rs  request_params.rs  response_types.rs
engine/flapjack-http/src/handlers/: analytics_dto.rs  analytics_tests.rs  browse.rs  chat.rs  chat_tests.rs  dashboard.rs  dictionaries.rs  dto_algolia.rs  dto_algolia_tests.rs  experiments_tests.rs  facets.rs  health.rs  index_resource_store.rs  indices.rs  insights.rs  insights_tests.rs  insights_tests_gdpr.rs  internal.rs  internal_ops.rs  internal_tests.rs  keys.rs  keys_tests.rs  metrics.rs  metrics_billing_contract_tests.rs  metrics_latency_tests.rs  metrics_live_index_state_tests.rs  migration.rs  mod.rs  objects_tests.rs  personalization.rs  personalization_tests.rs  query_suggestions.rs  readiness.rs  recommend.rs  recommend_rules.rs  recommend_rules_tests.rs  recommend_rules_tests_put.rs  recommend_tests.rs  replicas.rs  rules.rs  (+10 more)
engine/flapjack-http/src/handlers/analytics/: geo_endpoints.rs  mod.rs  read_endpoints.rs
engine/flapjack-http/src/handlers/dashboard_fallback/: index.html
engine/flapjack-http/src/handlers/experiments/: estimate.rs  mod.rs  promote.rs  resolve.rs  response_helpers.rs  results.rs  schemas.rs
engine/flapjack-http/src/handlers/internal_ops/: document_ops.rs  index_ops.rs  resource_ops.rs
engine/flapjack-http/src/handlers/migration/: algolia_client.rs  algolia_client_tests.rs  async_status_tests.rs  export.rs  export_resume_tests.rs  export_tests.rs  import.rs  import_contract_recovery_tests.rs  import_contract_replica_tests.rs  import_contract_test_support.rs  import_contract_tests.rs  job_runner.rs  mod.rs  source_reader.rs  source_reader_tests.rs  source_snapshot.rs  source_snapshot_tests.rs  source_test_support.rs  spool.rs  spool_gc_probe_tests.rs  spool_lifecycle.rs  spool_support.rs  spool_tests.rs  spool_transaction.rs  translation.rs  translation_bundle.rs  (+4 more)
engine/flapjack-http/src/openapi/: tests.rs
engine/flapjack-http/tests/: ack_on_durable_integration.rs  feature_defaults_test.rs
engine/flapjack-server/: Cargo.toml
engine/flapjack-server/src/: ingest.rs  main.rs
engine/flapjack-server/tests/: admin_key_test.rs  build_info_cli_test.rs  crash_durability_test.rs  env_mode_test.rs  feature_defaults_test.rs  idempotency_restart_durability_test.rs  ingest_cli_test.rs  restart_during_writes_test.rs  version_consistency_test.rs
engine/flapjack-server/tests/support/: mod.rs
(+972 files in other folders)
