[package]
name = "flapjack-http"
version = "0.1.0"
edition = "2021"

[features]
default = []
vector-search = ["flapjack/vector-search", "dep:lru"]
vector-search-local = ["vector-search", "flapjack/vector-search-local"]

[dependencies]
flapjack = { path = "..", features = ["analytics", "openapi"] }
flapjack-replication = { path = "../flapjack-replication" }
flapjack-ssl = { path = "../flapjack-ssl" }

axum = "0.7"
dashmap = "6.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
rust-embed = "8"
mime_guess = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
nom = "7.1"
url = "2.5.8"
urlencoding = "2.1.3"
colored = "2"
fs2 = "0.4"
hostname = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lru = { version = "0.12", optional = true }
once_cell = "1.19"
prometheus = { version = "0.13", default-features = false }
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
ipnet = "2.11"
maxminddb = "0.24"
aws-config = "1"
aws-sdk-sesv2 = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
