[package]
name = "flapjack-server"
version = "1.0.10"
edition = "2021"

[[bin]]
name = "flapjack"
path = "src/main.rs"

[features]
default = []
otel = ["flapjack-http/otel"]
vector-search = ["flapjack/vector-search", "flapjack-http/vector-search"]
vector-search-local = ["vector-search", "flapjack/vector-search-local", "flapjack-http/vector-search-local"]

[dependencies]
flapjack = { path = "..", default-features = false, features = ["memory-stats", "axum-support", "s3-snapshots", "openapi", "analytics", "decompound"] }
flapjack-http = { path = "../flapjack-http", default-features = false }
clap = { version = "4.5.55", features = ["derive", "env"] }
serde_json = "1"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["stats", "background_threads_runtime_support"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
axum = "0.7"
